replace assertEquals with assertThat