@@ -86,7 +86,7 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
         assertThat(dObj.getName()).isEqualTo("IntegerTest");
         assertThat(dObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:int");
         assertThat(dObj.getValue()).isInstanceOf(Integer.class);
-        assertThat(dObj.getValue()).isEqualTo(new Integer(123));
+        assertThat(dObj.getValue()).isEqualTo(Integer.valueOf(123));
       } else if ("dObj6".equals(dObj.getId())) {
         assertThat(dObj.getClass()).isEqualTo(LongDataObject.class);
         assertThat(dObj.getName()).isEqualTo("LongTest");
@@ -140,7 +140,7 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
         assertThat(dObj.getName()).isEqualTo("SubIntegerTest");
         assertThat(dObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:int");
         assertThat(dObj.getValue()).isInstanceOf(Integer.class);
-        assertThat(dObj.getValue()).isEqualTo(new Integer(45));
+        assertThat(dObj.getValue()).isEqualTo(Integer.valueOf(45));
       } else if ("dObj6".equals(dObj.getId())) {
         assertThat(dObj.getClass()).isEqualTo(LongDataObject.class);
         assertThat(dObj.getName()).isEqualTo("SubLongTest");
